# schwung-helm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  release.json
.github/workflows/: release.yml
data/: Move Organ.helm
scripts/: Dockerfile  build.sh  install.sh
src/: help.json  module.json  ui.js
src/dsp/: helm_plugin.cpp
